Reorganize the directory structure
Reorganize the directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,21 @@
-#-----------------------------------------------------------------------------
-set(MODULE_NAME GyroGuide)
+cmake_minimum_required(VERSION 2.8.9)
+
+project(GyroGuide)
 
 #-----------------------------------------------------------------------------
-set(MODULE_PYTHON_SCRIPTS
-  ${MODULE_NAME}.py
-  )
-
-set(MODULE_PYTHON_RESOURCES
-  )
-
-#-----------------------------------------------------------------------------
-slicerMacroBuildScriptedModule(
-  NAME ${MODULE_NAME}
-  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
-  RESOURCES ${MODULE_PYTHON_RESOURCES}
-  WITH_GENERIC_TESTS
-  )
+set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/Nightly/Modules/GyroGuide")
+set(EXTENSION_CATEGORY "IGT")
+set(EXTENSION_CONTRIBUTORS "Ruifeng Chen, Luping Fang, Qing Pan (College of Information Engineering, Zhejiang University of Technology, Hangzhou, China),Xiaolei Chen, Jiashu Zhang (Department of Neurosurgery, PLA General Hospital, Beijing, China)")
+set(EXTENSION_DESCRIPTION "An python extension of 3D Slicer helps surgeons implement puncture orientation.")
+set(EXTENSION_ICONURL "http://www.slicer.org/slicerWiki/images/a/a7/GyroGuide.png")
+set(EXTENSION_SCREENSHOTURLS "http://www.slicer.org/slicerWiki/index.php/File:GyroGuide-Step-2.png")
 
 #-----------------------------------------------------------------------------
-if(BUILD_TESTING)
+find_package(Slicer REQUIRED)
+include(${Slicer_USE_FILE})
 
-  # Register the unittest subclass in the main script as a ctest.
-  # Note that the test will also be available at runtime.
-  slicer_add_python_unittest(SCRIPT ${MODULE_NAME}.py)
+#-----------------------------------------------------------------------------
+add_subdirectory(GyroGuide)
 
-  # Additional build-time testing
-  add_subdirectory(Testing)
-endif()
-
+#-----------------------------------------------------------------------------
+include(${Slicer_EXTENSION_CPACK})
